--- a/User Manual/GUI/VECTO-Editor.html
+++ b/User Manual/GUI/VECTO-Editor.html
@@ -47,9 +47,7 @@ current Job File</span></div>
 </div>
 <div style="margin-left: 40px;"><img src="../pics/icons/Actions-document-save-as-icon.png" style="width: 16px; height: 16px;" alt="SaveAs"><a name="saveas"></a> <span style="font-weight: bold;">Save
 Job File as...</span><br>
-<div style="margin-left: 40px;">Using the VECTO File
-Browser<br>
-<br>
+<div style="margin-left: 40px;"><br>
 <br>
 </div>
 </div>
@@ -64,7 +62,7 @@ be sent to the Job List automatically when saved.<br>
 <a name="engonly"></a> <span style="font-weight: bold;">Engine Only Mode</span><br><div style="margin-left: 40px;">This
 mode is used to calculate fuel consumption from a given load cycle
 (engine speed and torque). Vehicle (.vveh), Gearbox (.vgbx) and
-Auxiliary (.vaux) files are notrequired. <br>The <a href="../fileformat/VDRI.html">driving cylce (.vdri)</a> must contain:<br><ul><li>Engine speed: header: &lt;n&gt;</li><li>Engine torque &lt;Me&gt; <span style="text-decoration: underline;">or</span> engine power &lt;Pe&gt; at clutch. <span style="font-weight: bold; color: red;">Note that VECTO adds engine inertia power demand!</span></li><li>[Optional] Additional power demand (aux) &lt;Padd&gt;</li></ul></div><span style="font-weight: bold;">Driver Tab</span><br>
+Auxiliary (.vaux) files are not required. <br>The <a href="../fileformat/VDRI.html">driving cylce (.vdri)</a> must contain:<br><ul><li>Engine speed: header: &lt;n&gt;</li><li>Engine torque &lt;Me&gt; <span style="text-decoration: underline; font-weight: bold;">or</span> engine power &lt;Pe&gt; at clutch. <span style="font-weight: bold; color: red;">Note that VECTO adds engine inertia power demand!</span></li><li>[Optional] Additional power demand (aux) &lt;Padd&gt;</li></ul></div><span style="font-weight: bold;">Driver Tab</span><br>
 <div style="margin-left: 40px;">Open <a href="VECTO-Editor_Driver.html">Driver Tab</a></div>
 </div>
 <br>
@@ -81,9 +79,7 @@ Editor</a></span><br>
 &nbsp;<a name="browse"></a>
 <span style="font-weight: bold;">Browse for
 vehicle/engine/gearbox files</span><br>
-<div style="margin-left: 40px;">...using the VECTO File
-Browser<br>
-<br>
+<div style="margin-left: 40px;"><br>
 <br>
 </div>
 </div>
@@ -107,8 +103,7 @@ calculation.<br>
 Open Command</a>).<br>
 <span style="font-weight: bold;">Click</span>
 selected items to edit file paths.<br>
-<img style="width: 16px; height: 16px;" alt="addcycle" src="../pics/icons/plus-circle-icon.png"> Add cycle (.vdri)
-using the VECTO file browser<br>
+<img style="width: 16px; height: 16px;" alt="addcycle" src="../pics/icons/plus-circle-icon.png"> Add cycle (.vdri)<br>
 <img style="width: 16px; height: 16px;" alt="remcycle" src="../pics/icons/minus-circle-icon.png"> Remove the
 selected cycle from the list<br>
 The .vdri format is described <a href="../fileformat/VDRI.html">here</a>.<br>
