--- a/User Manual/GUI/VEH-Editor.html
+++ b/User Manual/GUI/VEH-Editor.html
@@ -27,21 +27,19 @@ file</span><br>
 <div style="margin-left: 40px;">Create a new empty .vveh
 file<br>
 </div>
-<br>
+<br><br>
 <img src="../pics/icons/Open-icon.png" style="width: 16px; height: 16px;" alt="open"><span style="font-weight: bold;"><a name="open"></a>Open
 existing file</span><br>
 <div style="margin-left: 40px;">Open an existing .vveh
-file (using the VECTO File
-Browser)<br>
+file<br>
 </div>
-<span style="font-family: Verdana;"></span><br>
+<span style="font-family: Verdana;"></span><br><br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/Actions-document-save-icon.png" style="width: 16px; height: 16px;" alt="save"><a name="save"></a> <span style="font-weight: bold;">Save
 current file</span><br>
-<span style="font-family: Verdana;"></span><br>
+<span style="font-family: Verdana;"></span><br><br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/Actions-document-save-as-icon.png" style="width: 16px; height: 16px;" alt="SaveAs"><a name="saveas"></a> <span style="font-weight: bold;">Save
 file as...</span><br>
-<div style="margin-left: 40px;">Using the VECTO File
-Browser.<br>
+<div style="margin-left: 40px;"><br>
 </div>
 <span style="font-family: Verdana;"></span><br>
 <span style="font-family: Verdana;"></span><img src="../pics/icons/export-icon.png" style="width: 16px; height: 16px;" alt="sendto"><a name="sendto"></a> <span style="font-weight: bold;">Send
@@ -51,7 +49,7 @@ Editor</a></span><br>
 file was opened via the <a href="VECTO-Editor.html">VECTO
 Editor</a> the file will be sent automatically when saved.<br>
 </div>
-<span style="font-family: Verdana;"></span><br>
+<span style="font-family: Verdana;"></span><br><br>
 <span style="font-weight: bold;"><a name="cat"></a>Category</span> (Not used in current version!)
 <div style="margin-left: 40px;">The HDV category is needed
 in Declaration Mode to assign the correct driving cycles. Available
@@ -86,7 +84,7 @@ Class</span><span style="font-weight: bold;"></span> (Not used in current versio
 <div style="margin-left: 40px;">Displayes the
 automatically selected HDV Class depending on Category, Axle
 Configuration and GVW.</div>
-<br>
+<br><br>
 <span style="font-weight: bold;"><a name="load"></a>Weight
 / Loading</span> [kg]<br>
 <div style="margin-left: 40px;">These fields define the
@@ -97,7 +95,7 @@ Weight Vehicle</span><span style="color: rgb(253, 0, 0);">,
 </span><span style="font-weight: bold; color: rgb(253, 0, 0);">Curb
 Weight Extra Trailer/Body</span><span style="color: rgb(253, 0, 0);"> and </span><span style="font-weight: bold; color: rgb(253, 0, 0);">Loading</span><span style="color: rgb(253, 0, 0);"> for calculation!</span><br>
 </div>
-<br>
+<br><br>
 <a name="air"></a><span style="font-weight: bold;">Air
 Resistance</span><br>
 <div style="margin-left: 40px;">The product of <span style="font-weight: bold;">Drag Coefficient</span>
@@ -109,7 +107,7 @@ vehicle) defines the Air Resistance. Note that the Drag Coefficient may
 be altered when using <span style="font-weight: bold;">Cross
 Wind Correction</span> (see below).<br>
 </div>
-<br>
+<br><br>
 <span style="font-weight: bold;"><a name="axl"></a>Axles
 / Wheels</span><br>
 <div style="margin-left: 40px;">Rolling Resistance
@@ -120,20 +118,20 @@ Curb Weight Extra Trailer/Body and Loading).<br>Use the <img style="width: 16px;
 remove axles form the vehicle. Doubleclick entries to edit existing
 axle configurations.<br>
 <span style="font-weight: bold;"></span></div>
-<br>
+<br><br>
 <span style="font-weight: bold;"><a name="inertia"></a>Wheels
 Inertia</span><span style="font-weight: bold;"></span>
 [kgm<sup>2</sup>]<br>
 <div style="margin-left: 40px;">Rotational inertia of all
 wheels combined.<br>
 </div>
-<br>
+<br><br>
 <span style="font-weight: bold;"><a name="diam"></a>Wheel
 Diameter (dyn)</span> [m]<br>
 <div style="margin-left: 40px;">Effective (dynamic) wheel
 diameter used to calculate engine speed.<br>
 </div>
-<br>
+<br><br>
 <span style="font-weight: bold;"><a name="wind"></a>Cross
 Wind Correction</span><br>
 <div style="margin-left: 40px;">Three different options
@@ -236,10 +234,7 @@ input for Air Speed and Yaw Angle, see <a href="../fileformat/VDRI.html">.vdri f
 <div style="margin-left: 40px;"><img src="../pics/misc/browse.png" style="width: 28px; height: 21px;" alt="browse"> <span style="font-weight: bold;">Browse
 for .vcdv/.vcdb files</span><br>
 </div>
-<div style="margin-left: 80px;">Using the VECTO File
-Browser<br>
-</div>
-<br><div style="margin-left: 40px;"><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with GRAPHi or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br></div><br>
+<br><br><div style="margin-left: 40px;"><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a> or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br></div><br><br>
 <a name="retard"></a><span style="font-weight: bold;">Retarder</span><br>
 <div style="margin-left: 40px;">If available a <span style="font-weight: bold;">Retarder Torque Loss Map</span> can be defined here. Three options are available:<br>
 <ul>
@@ -283,19 +278,16 @@ with "<span style="font-weight: bold;">c</span> "</span><br>
 </div>
 <br>
 <div style="margin-left: 40px;"><img src="../pics/misc/browse.png" style="width: 28px; height: 21px;" alt="browse"> <span style="font-weight: bold;">Browse
-for Retarder Input Files</span><br>
-<div style="margin-left: 40px;">Using the VECTO File
-Browser<br>
+for Retarder Input Files</span>
 </div>
-</div>
-<br>
+<br><br>
 <img src="../pics/misc/OK.png" style="width: 75px; height: 23px;" alt="OK"><a name="ok"></a><span style="font-weight: bold;">Save
 and close file</span><br>
 <div style="margin-left: 40px;">If necessary the file path
 in the <a href="VECTO-Editor.html">VECTO Editor</a>
 will be updated.<br>
 </div>
-<br>
+<br><br>
 <img src="../pics/misc/Cancel.png" style="width: 75px; height: 23px;" alt="Cancel"><a name="cancel"></a><span style="font-weight: bold;">
 Cancel without saving</span><br>
 <span style="font-weight: bold;"></span></div>
