--- a/User Manual/GUI/mainform_batch.html
+++ b/User Manual/GUI/mainform_batch.html
@@ -43,9 +43,7 @@ Cycle List<br>
 </div>
 <div style="margin-left: 80px;"><img style="width: 16px; height: 16px;" alt="add" src="../pics/icons/plus-circle-icon.png"><a name="addfile"></a>
 <span style="font-weight: bold;">Add files to Job List</span><br>
-<div style="margin-left: 40px;">...using the VECTO File
-Browser<br>
-<br>
+<div style="margin-left: 40px;"><br>
 </div>
 </div>
 <div style="margin-left: 80px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected
@@ -60,8 +58,7 @@ Options</span><br>
 <ul style="margin-left: 80px;">
 <li>Save/Load List</li>
 <ul>
-<li>Save or load the Cycle List to text file (using the VECTO
-File Browser)</li>
+<li>Save or load the Cycle List to text file</li>
 </ul>
 <li>Load Autosave-List</li>
 <ul>
