--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -38,7 +38,7 @@ existing Job or Input File</span><br>
 <div style="text-align: left;">
 <div style="margin-left: 80px;">Open an existing .vecto,
 .vveh, .veng or .vgbx
-file (using the VECTO File Browser)<br>
+file<br>
 </div>
 <div style="margin-left: 40px;"><br>
 <br>
@@ -48,8 +48,8 @@ Tools</span><br>
 <div style="text-align: left;">
 <div style="margin-left: 40px;">
 <ul>
-<li><span style="font-weight: bold;">VECTO,
-Vehicle, Engine Gearbox Editor</span></li>
+<li><span style="font-weight: bold;"><a href="VECTO-Editor.html">VECTO</a>,
+<a href="VEH-Editor.html">Vehicle</a>, <a href="ENG-Editor.html">Engine</a>, <a href="GBX-Editor.html">Gearbox</a> Editor</span></li>
 <ul>
 <li>Opens the respective&nbsp;Editor&nbsp;</li>
 </ul>
@@ -60,9 +60,7 @@ editor</li>
 </ul>
 <li style="font-weight: bold;">Change Working Directory</li>
 <ul>
-<li>Change the current Working Directory&nbsp;(using the
-VECTO File
-Browser)</li>
+<li>Change the current Working Directory. More details <a href="settings.html#workdir">here</a>.</li>
 </ul><li style="font-weight: bold;">Settings</li><ul><li>Opens the <a href="settings.html">Settings</a> dialog.</li></ul>
 </ul>
 </div>
@@ -79,7 +77,7 @@ Browser)</li>
 <ul>
 <li style="font-weight: bold;"><span style="font-weight: normal;">Opens this User Manual</span></li>
 </ul>
-<li style="font-weight: bold;"><span style="font-weight: bold;">Quick Start Guide</span></li>
+<li style="font-weight: bold;"><a href="../quickstart.html"><span style="font-weight: bold;">Quick Start Guide</span></a></li>
 <ul>
 <li style="font-weight: bold;"><span style="font-weight: normal;">Start Quick Start Guide<br>
 </span></li>
@@ -91,8 +89,8 @@ for Licensing</span></li>
 </ul>
 <li style="font-weight: bold;">About VECTO</li>
 <ul>
-<li>Information about the software, license and support
-contact</li>
+<li>Information about the software, license and <a href="../contact.html">support
+contact</a></li>
 </ul>
 <ul>
 </ul>
@@ -139,9 +137,7 @@ Job List. Only checked files are calculated when clicking START.<br>
 </div>
 <div style="margin-left: 40px;"><img style="width: 16px; height: 16px;" alt="add" src="../pics/icons/plus-circle-icon.png"><a name="addfile"></a>
 <span style="font-weight: bold;">Add files to Job List</span><br>
-<div style="margin-left: 40px;">...using the VECTO File
-Browser<br>
-<br>
+<div style="margin-left: 40px;"><br>
 </div>
 </div>
 <div style="margin-left: 40px;"><img style="width: 16px; height: 16px;" alt="remove" src="../pics/icons/minus-circle-icon.png"><a name="remfile"></a> <span style="font-weight: bold;">Remove selected&nbsp;files from List</span><br>
@@ -154,8 +150,7 @@ Options</span><br>
 <ul style="margin-left: 40px;">
 <li>Save/Load List</li>
 <ul>
-<li>Save or load Job List to text file (using the VECTO File
-Browser)</li>
+<li>Save or load Job List to text file</li>
 </ul>
 <li>Load Autosave-List</li>
 <ul>
