--- a/User Manual/qsg/qsg25.html
+++ b/User Manual/qsg/qsg25.html
@@ -13,8 +13,8 @@
 </table>
 <hr style="width: 100%; height: 2px;"><span style="font-family: Verdana;"><span style="text-decoration: underline;"></span></span><a href="usermanual.html"><span style="font-family: Verdana;"></span></a>
 <div style="text-align: center;">
-<h1 style="text-align: left;"><small>Done</small></h1>
-<img src="pics/step25.png" style="width: 726px; height: 449px;" alt=""><br>
+<h1 style="text-align: left;"><small>Results</small></h1>
+<img src="pics/step25.png" style="width: 1232px; height: 519px;" alt=""><br>
 <span style="font-family: Verdana;"></span><span style="font-family: Verdana;"></span>
 <hr style="width: 100%; height: 2px;"><span style="font-family: Verdana;"></span>
 <div style="text-align: left;"><span style="font-weight: bold;"></span>The calculations
@@ -38,7 +38,7 @@ all calculations in a single file.<br>
 </div>
 </div>
 </div><div style="text-align: left;">
-<br>The file formats are described <a href="../fileformat/index.html">here</a>.<br><br>
+<br>The file formats are described <a href="../fileformat/index.html">here</a>.<br><br><img style="width: 11px; height: 11px;" alt="" src="pics/_redbox.png"> By clicking the blue underlined messages you can open the results with <span style="font-weight: bold;">GRAPHi</span>, File Explorer or an user-defined tool (see <a href="../GUI/settings.html">Settings</a>). See the <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi User Manual</a> for more information.<br><br><br>
 </div><table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
