VECTO 1.3.1 - Fixed assembly information - Removed duplicate icon form User Manual - updated readme.txt

--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -65,7 +65,7 @@ editor</li>
 </ul>
 </div>
 <div style="margin-left: 40px;"><br>
-<img src="../pics/misc/Help-icon.png" style="width: 16px; height: 16px;" alt="info"><span style="font-weight: bold;"><a name="info"></a>Help</span><br>
+<img src="../pics/icons/Help-icon.png" style="width: 16px; height: 16px;" alt="info"><span style="font-weight: bold;"><a name="info"></a> Help</span><br>
 </div>
 <ul>
 <ul>
