--- a/User Manual/GUI/GBX-Editor.html
+++ b/User Manual/GUI/GBX-Editor.html
@@ -113,7 +113,7 @@ ratio and efficiency of the selected gear. </li>
 <li>Gear "A" defines the ratio of the axle transmission /
 differential.</li>
 <li>Gear
-"TC" (AT only): For AT gearboxes with torque converter a seperate
+"TC" (AT only): For AT gearboxes with torque converter a separate
 (fictional) gear
 is defined for cases where the lock-up clutch is open.
 This&nbsp;gear
@@ -229,14 +229,14 @@ a gear change is initiated (by crossing the up- or down-shift line)
 VECTO may skip one or several gears as long as the required <a href="#torqres">torque reserve</a> is provided.<br>
 <img style="width: 568px; height: 341px;" alt="" src="pics/GBX-Editor-shift3.PNG"></div>
 <br><br>
-<a name="torqres"></a><span style="font-weight: bold;">Torque Reserve</span><br>
+<a name="torqres"></a><span style="font-weight: bold;">Torque Reserve</span> [%]<br>
 <div style="margin-left: 40px;">This parameter is required
 for the "<span style="font-weight: bold;">Allow shift-up
 inside polygons</span>" and "<span style="font-weight: bold;">Skip
 Gears</span>" options.</div>
 <br><br>
 <a style="font-weight: bold;" name="mintime"></a><span style="font-weight: bold;">Minimum time between two gear
-shifts</span><br>
+shifts</span> [s]<br>
 <div style="margin-left: 40px;">Limits
 the time between two gear shifts in whole seconds. This rule will be
 ignored if rpms are too high or too low. Note that high values may
