--- a/User Manual/GUI/VECTO-Editor_Aux.html
+++ b/User Manual/GUI/VECTO-Editor_Aux.html
@@ -47,8 +47,8 @@ Format</span> (comma-separated, dot = decimal-mark):<br>
 <table style="text-align: left; width: 510px; height: 247px; margin-left: 40px;" border="1" cellpadding="2" cellspacing="1">
 <tbody>
 <tr>
-<td><span style="color: rgb(51, 102, 255); font-weight: bold;">c </span><span style="font-weight: bold;">Transmission ration to engine
-speed</span></td>
+<td><span style="color: rgb(51, 102, 255); font-weight: bold;">c </span><span style="font-weight: bold;">Transmission ratio to engine
+speed</span><span style="font-weight: bold;"> [-]</span></td>
 <td></td>
 <td></td>
 </tr>
@@ -58,7 +58,7 @@ speed</span></td>
 <td></td>
 </tr>
 <tr>
-<td><span style="color: rgb(51, 102, 255); font-weight: bold;">c </span><span style="font-weight: bold;">Efficiency to engine</span></td>
+<td><span style="color: rgb(51, 102, 255); font-weight: bold;">c </span><span style="font-weight: bold;">Efficiency to engine&nbsp;</span><span style="font-weight: bold;">[-]</span></td>
 <td></td>
 <td></td>
 </tr>
