--- a/User Manual/GUI/mainform.html
+++ b/User Manual/GUI/mainform.html
@@ -27,7 +27,7 @@ New
 Job File</span><br>
 </div>
 <div style="margin-left: 80px;">Create a new .vecto file
-using the VECTO Editor<br>
+using the <a href="VECTO-Editor.html">VECTO Editor</a><br>
 </div>
 <div style="margin-left: 40px;"><br>
 <br>
