pre-merge commit -small changes in User Manual -update in .vecto JSON input: Parameters not needed in Engine Only are now optional

--- a/User Manual/GUI/VEH-Editor.html
+++ b/User Manual/GUI/VEH-Editor.html
@@ -235,8 +235,8 @@ input for Air Speed and Yaw Angle, see <a href="../fileformat/VDRI.html">.vdri f
 for .vcdv/.vcdb files</span><br>
 </div>
 <br><br><div style="margin-left: 40px;"><img style="width: 22px; height: 22px;" alt="" src="../pics/misc/OpenFile.PNG"> <span style="font-weight: bold;">Open file</span> with <a href="../../GRAPHi/documentation/HTML%20Manual/mainwindow.html">GRAPHi</a> or an user-defined tool (see <a href="settings.html#opencmd">File Open Command)</a>.<br></div><br><br>
-<a name="retard"></a><span style="font-weight: bold;">Retarder</span><br>
-<div style="margin-left: 40px;">If available a <span style="font-weight: bold;">Retarder Torque Loss Map</span> can be defined here. Three options are available:<br>
+<a name="retard"></a><span style="font-weight: bold;">Retarder Losses</span><br>
+<div style="margin-left: 40px;">If available a <span style="font-weight: bold;">Retarder Torque Loss Map</span> can be defined here to consider losses caused by the retarder (even if not actively in use). <br><span style="font-weight: bold; color: red;">Note: Do not use this function if the retarder's losses are already included in the <a href="GBX-Editor.html#gears">Transmission Loss Maps</a>!</span><br><br>Three options are available:<br>
 <ul>
 <li>None</li>
 <li>Primary (before gearbox): The rpm ratio is relative to the
